kubernetes/ingress-controller/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: kube-public
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 30000
    protocol: TCP
  - name: https
    port: 443
    nodePort: 30443
    protocol: TCP
  selector:
    app: ingress-nginx
